--- a/algo.html
+++ b/algo.html
@@ -1,1 +1,2 @@
-oi sou DIOGO, tenho 25 anos e moro em taguatinga-DF.
+	Oi sou DIOGO, tenho 25 anos e moro em taguatinga-DF.
+	hoje é um belo dia pra estudar pensava eu,
