--- a/algo.html
+++ b/algo.html
@@ -1,3 +1,4 @@
 	Oi sou DIOGO, tenho 25 anos e moro em taguatinga-DF.
-	hoje é um belo dia pra estudar pensava eu,mas os pedreiros
-na obra do vizinho
+	
+Hoje é um belo dia pra estudar pensava eu,mas os pedreiros
+na obra do vizinho e não me deixam em paz -_-'
